# SecretSafe

./: Cargo.toml  Dioxus.toml  README.md  package.json
assets/: styles.css  tailwind.css
browser-extension/: README.md  background.js  content.js  manifest.json  popup.css  popup.html  popup.js
src/: app.rs  main.rs  tauri_api.rs
src-tauri/: Cargo.toml  secretsafe.vault  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/icons/installer/: README.md
src-tauri/scripts/: build-installers.ps1  generate-installer-assets.ps1
src-tauri/src/: bridge.rs  clipboard.rs  commands.rs  crypto.rs  dialog.rs  error.rs  import.rs  lib.rs  main.rs  models.rs  password.rs  storage.rs  vault.rs  windows_consent.rs  windows_unlock.rs
